Ridded of 'system.out' in to service classes. Transferred to controllers classes.