@@ -3,6 +3,7 @@ package com.study.dao.data;
 import com.study.dao.core.Student;
 import com.study.dao.core.Subject;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -11,7 +12,7 @@ public class StudentList {
     public List<Student> studentList;
 
     public StudentList() {
-        studentList = new ArrayList<>(List.of(
+        studentList = new ArrayList<>(Arrays.asList(
                 new Student("Ivan", "Ivanenko", "Radioengineering", "Radio_engineering", "Ree_11",
                         new ArrayList<>(List.of(new Subject("Math"), new Subject("Physics")))
         )));
